--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist/browser",
+    "public": "dist/omokuyo/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
