--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
+    "@angular/fire": "^17.1.0",
     "@angular/forms": "^17.3.0",
     "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.3.0",
@@ -24,12 +25,14 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.8",
     "angular-highcharts": "^17.0.1",
+    "animation": "^0.1.3",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "express": "^4.18.2",
     "highcharts": "^11.4.4",
     "highcharts-angular": "^4.0.0",
     "ng2-charts": "^6.0.1",
+    "primeng": "^17.18.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
